--- a/composer.json
+++ b/composer.json
@@ -41,6 +41,7 @@
         "symfony/twig-bundle": "5.4.*",
         "symfony/validator": "5.4.*",
         "symfony/web-link": "5.4.*",
+        "symfony/webpack-encore-bundle": "^1.17",
         "symfony/yaml": "5.4.*",
         "twig/extra-bundle": "^3.7",
         "twig/string-extra": "^3.7",
