--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,7 @@ yarn-error.log
 ###> custom  ###
 /public/uploads/
 ###< custom ###
+
+###> liip/imagine-bundle ###
+/public/media/cache/
+###< liip/imagine-bundle ###
