--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.16",
         "fakerphp/faker": "^1.23",
+        "guzzlehttp/guzzle": "^7.7",
         "knplabs/knp-time-bundle": "^1.20",
         "liip/imagine-bundle": "^2.11",
         "phpdocumentor/reflection-docblock": "^5.3",
