--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "doctrine/orm": "^2.16",
         "fakerphp/faker": "^1.23",
         "guzzlehttp/guzzle": "^7.7",
+        "knplabs/knp-paginator-bundle": "^5.9",
         "knplabs/knp-time-bundle": "^1.20",
         "liip/imagine-bundle": "^2.11",
         "phpdocumentor/reflection-docblock": "^5.3",
