--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -30,7 +30,7 @@ security:
             # https://symfony.com/doc/current/security.html#the-firewall
 
             # https://symfony.com/doc/current/security/impersonating_user.html
-            # switch_user: true
+            switch_user: true
 
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
@@ -40,6 +40,9 @@ security:
          - { path: ^/pins, roles: ['IS_AUTHENTICATED_ANONYMOUSLY'] }
         # - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
+
+    role_hierarchy:
+        ROLE_ADMIN : ['ROLE_USER', 'ROLE_ADMIN', 'ROLE_ALLOWED_TO_SWITCH' ]
 
 when@test:
     security:
